cluster/apps/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/component: sonarr
